lox-tests/tests/number/division_by_zero.stderr
ERROR: Division by 0
 --> 1:11
  |
1 | var num = 0 / 0;
  |           ^---^
